Bump minimal requirements to Java 17 (#532)
This commit upgrades the plugin to build with Java 17, but also
require everything to use Java 17 minimally: this is preparation
work for supporting Micronaut 4 which will raise the minimal JDK
version to 17.

This doesn't upgrade transitive plugins like the Docker plugin
yet.